--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -38,31 +38,45 @@
 }
 
 .card-1 {
-    border-radius: 25px;
+    position: relative;
+    border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
+    height: 350px;
+    width: 300px;
+    background-color: whitesmoke;
 }
 
 .card-2 {
+    position: relative;
     border-radius: 25px;
     box-shadow: 10px 10px;
     border: solid;
 }
 
 .card-3 {
+    position: relative;
     border-radius: 25px;
     box-shadow: 10px 10px;
     border: solid;
 }
 
 .card-4 {
+    position: relative;
     border-radius: 25px;
     box-shadow: 10px 10px;
     border: solid;
 }
 
 .card-5 {
+    position: relative;
     border-radius: 25px;
     box-shadow: 10px 10px;
     border: solid;
+}
+
+.card-layout {
+    position: relative;
+    top: 50px;
+    background-color: rgb(229, 220, 220);
 }
