--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -38,6 +38,7 @@
 
 .card-1 {
     position: relative;
+    left: 600px;
     border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
@@ -48,6 +49,7 @@
 
 .card-2 {
     position: relative;
+    left: 650px;
     border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
@@ -58,6 +60,7 @@
 
 .card-3 {
     position: relative;
+    left: 700px;
     border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
@@ -68,6 +71,7 @@
 
 .card-4 {
     position: relative;
+    left: 1150px;
     border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
@@ -78,6 +82,7 @@
 
 .card-5 {
     position: relative;
+    left: 500px;
     border-radius: 20px;
     box-shadow: 10px 10px;
     border: solid;
@@ -91,3 +96,36 @@
     top: 50px;
     background-color: rgb(229, 220, 220);
 }
+
+@media screen,
+print {
+    /* … */
+}
+
+
+/* // Small devices (landscape phones, 576px and up) */
+
+@media (min-width: 576px) {}
+
+@media (max-width: 575.98px) {}
+
+
+/* 
+// Medium devices (tablets, 768px and up) */
+
+@media (min-width: 768px) {}
+
+
+/* // Large devices (desktops, 992px and up) */
+
+@media (min-width: 992px) {}
+
+
+/* // X-Large devices (large desktops, 1200px and up) */
+
+@media (min-width: 1200px) {}
+
+
+/* // XX-Large devices (larger desktops, 1400px and up) */
+
+@media (min-width: 1400px) {}
